--- a/portfolio.html
+++ b/portfolio.html
@@ -6,92 +6,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="index.html">WebStudio</a>
-
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="/">Контакты</a></li>
+            <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
+    
+            <ul class="list nav-list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><button class="button">Все</button></li>
-                <li><button class="button">Веб-сайты</button></li>
-                <li><button class="button">Приложения</button></li>
-                <li><button class="button">Дизайн</button></li>
-                <li><button class="button">Маркетинг</button></li>
+        <section class="gallery">
+            <ul class="list">
+                <li><button type="button" class="gallery-button">Все</button></li>
+                <li><button type="button" class="gallery-button">Веб-сайты</button></li>
+                <li><button type="button" class="gallery-button">Приложения</button></li>
+                <li><button type="button" class="gallery-button">Дизайн</button></li>
+                <li><button type="button" class="gallery-button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/portfolio/img1.jpg" alt="Открытый веб-сайт на ноутбуке" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="gallery-title">Технокряк</h2>
+                    <p class="gallery-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="gallery-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="gallery-title">Ресторан Seafood</h2>
+                    <p class="gallery-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="gallery-title">Проект Prime</h2>
+                    <p class="gallery-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="gallery-title">Проект Boxes</h2>
+                    <p class="gallery-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="gallery-title">Inspiration has no Borders</h2>
+                    <p class="gallery-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="gallery-title">Издание Limited Edition</h2>
+                    <p class="gallery-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="gallery-title">Проект LAB</h2>
+                    <p class="gallery-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="gallery-title">Growing Business</h2>
+                    <p class="gallery-text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logo link">Web<span class="logo-half-footer">Studio</span></a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>   
