--- a/portfolio.html
+++ b/portfolio.html
@@ -50,42 +50,42 @@
                 </li>
                 <li>
                     <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370">
-                    <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                    <h2 class="gallery-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                     <p class="gallery-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370">
-                    <h2 class="gallery-title">Ресторан Seafood</h2>
+                    <h2 class="gallery-title">Ресторан <span lang="en">Seafood</span></h2>
                     <p class="gallery-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
-                    <h2 class="gallery-title">Проект Prime</h2>
+                    <h2 class="gallery-title">Проект <span lang="en">Prime</span></h2>
                     <p class="gallery-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370">
-                    <h2 class="gallery-title">Проект Boxes</h2>
+                    <h2 class="gallery-title">Проект <span lang="en">Boxes</span></h2>
                     <p class="gallery-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370">
-                    <h2 class="gallery-title">Inspiration has no Borders</h2>
+                    <h2 class="gallery-title" lang="en">Inspiration has no Borders</h2>
                     <p class="gallery-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370">
-                    <h2 class="gallery-title">Издание Limited Edition</h2>
+                    <h2 class="gallery-title">Издание <span lang="en">Limited Edition</span></h2>
                     <p class="gallery-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370">
-                    <h2 class="gallery-title">Проект LAB</h2>
+                    <h2 class="gallery-title">Проект <lang lang="en">LAB</lang></h2>
                     <p class="gallery-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370">
-                    <h2 class="gallery-title">Growing Business</h2>
+                    <h2 class="gallery-title" lang="en">Growing Business</h2>
                     <p class="gallery-text">Приложение</p>
                 </li>
             </ul>
